--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                                     class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                                 <div class="flex justify-center space-x-4 mt-4">
                                     <button id="prevPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Previous
                                     </button>
                                     <button id="nextPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Next
                                     </button>
                                 </div>
@@ -236,11 +236,11 @@
                                 </div>
                                 <div class="flex justify-center space-x-4 mt-4">
                                     <button id="prevSpellPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Previous
                                     </button>
                                     <button id="nextSpellPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Next
                                     </button>
                                 </div>
@@ -275,11 +275,11 @@
                                     class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg"></div>
                                 <div class="flex justify-center space-x-4 mt-4">
                                     <button id="prevPotionPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Previous
                                     </button>
                                     <button id="nextPotionPage"
-                                        class="px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
+                                        class="btn-normal px-4 py-2 bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover:bg-gray-700 transition-all">
                                         Next
                                     </button>
                                 </div>
