--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body class="min-h-screen bg-cover bg-center bg-fixed text-yellow-200 font-cinzel theme-hogwarts">
     <div id="particles" class="absolute inset-0 pointer-events-none"></div>
     <div class="container mx-auto px-4 py-8 max-w-7xl">
@@ -23,10 +25,6 @@
                 <option value="hufflepuff">Hufflepuff</option>
                 <option value="ravenclaw">Ravenclaw</option>
                 <option value="slytherin">Slytherin</option>
-            </select>
-            <select id="cursorSelect"
-                class="w-48 bg-gray-800 text-yellow-200 border-2 rounded-lg p-2 focus:outline-none">
-                <!-- Options populated by JS -->
             </select>
         </div>
         <div class="grid grid-cols-1 mb-8">
@@ -54,15 +52,17 @@
             </div>
         </div>
         <div id="voices" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
-            <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">
-                Voices of Hogwarts
-            </h2>
-            <div class="flex justify-center mb-4">
-                <label for="voiceSearch" class="sr-only">Search Characters</label>
+    <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">
+        Voices of Hogwarts
+    </h2>
+    <div class="flex flex-col lg:flex-row gap-8">
+        <!-- Left Column - Character Selection -->
+        <div class="flex-1">
+            <div class="flex flex-col sm:flex-row gap-2 mb-4">
                 <input id="voiceSearch" type="text" placeholder="Search characters..."
-                    class="w-full max-w-md px-3 py-2 border-2 rounded-lg bg-gray-800 bg-opacity-50 text-yellow-200 font-harry-potter text-sm sm:text-base focus:outline-none" />
+                    class="flex-1 px-3 py-2 border-2 rounded-lg bg-gray-800 bg-opacity-50 text-yellow-200 font-harry-potter text-sm sm:text-base focus:outline-none" />
                 <button
-                    class="ml-1 audio-controls-button bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-3 py-1"
+                    class="audio-controls-button bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-3 py-1"
                     id="clearSelection">
                     Clear Selection
                 </button>
@@ -71,10 +71,14 @@
                 class="max-h-[300px] overflow-y-auto bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
                 <div id="characterList" class="grid grid-cols-3 gap-1"></div>
             </div>
-            <div
-                class="audio-controls mt-6 text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
+        </div>
+
+        <!-- Right Column - Audio Controls -->
+        <div class="lg:w-1/3 space-y-6">
+            <!-- Main Voice Player -->
+            <div class="audio-controls text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
                 <p id="p" class="text-lg text-yellow-200 mb-2">
-                    <span class="font-bold">Personnage:</span> Select a character
+                    <span class="font-bold">Character:</span> Select a character
                 </p>
                 <p id="a" class="text-lg text-yellow-200 mb-4">
                     <span class="font-bold">Audio:</span> None
@@ -91,10 +95,11 @@
                 </div>
                 <audio id="audio"></audio>
             </div>
-            <div
-                class="funny-voices-controls mt-6 text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
+
+            <!-- Funny Voices Tracking -->
+            <div class="funny-voices-controls text-center bg-black bg-opacity-60 border-2 border-[var(--primary-color)] rounded-lg p-4">
                 <h3 class="text-xl font-harry-potter text-yellow-400 mb-4">
-                    Funny Voices tracking (test)
+                    Funny Voices Tracking
                 </h3>
                 <div class="flex justify-center items-center space-x-4">
                     <input type="range" id="funnyVoiceVolume" min="0" max="1" step="0.01" value="1"
@@ -109,6 +114,9 @@
                 <audio id="funnyVoicesAudio"></audio>
             </div>
         </div>
+    </div>
+</div>
+
         <div id="music" class="tab-content hidden bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
             <h2 class="text-2xl font-harry-potter text-yellow-400 mb-4">
                 Music of the Wizarding World
@@ -232,7 +240,8 @@
                                         <!-- Categories populated by JS -->
                                     </select>
                                 </div>
-                                <div id="spellList" class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg">
+                                <div id="spellList"
+                                    class="grid grid-cols-3 gap-1 p-4 bg-gray-800 bg-opacity-50 rounded-lg">
                                 </div>
                                 <div class="flex justify-center space-x-4 mt-4">
                                     <button id="prevSpellPage"
@@ -354,18 +363,19 @@
                                 </button>
                             </div>
                             <div id="wand-content" class="category-content mt-4">
-    <p class="text-lg text-yellow-200 mb-4">
-        <span class="font-bold">Wand Quiz:</span> Answer questions
-        to find the wand that chooses you, crafted to match your unique
-        magical essence!
-    </p>
-    <button id="start-wand-quiz" class="btn-normal bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-4 py-2 font-harry-potter text-lg mb-4">
-        Start Wand Quiz
-    </button>
-    <div id="wand-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg hidden"></div>
-    <div id="wand-progress" class="mt-4"></div>
-    <div id="wand-result" class="mt-4 hidden"></div>
-</div>
+                                <p class="text-lg text-yellow-200 mb-4">
+                                    <span class="font-bold">Wand Quiz:</span> Answer questions
+                                    to find the wand that chooses you, crafted to match your unique
+                                    magical essence!
+                                </p>
+                                <button id="start-wand-quiz"
+                                    class="btn-normal bg-gray-800 bg-opacity-70 rounded-lg text-yellow-200 hover-transition transition-all px-4 py-2 font-harry-potter text-lg mb-4">
+                                    Start Wand Quiz
+                                </button>
+                                <div id="wand-quiz" class="p-4 bg-gray-800 bg-opacity-50 rounded-lg hidden"></div>
+                                <div id="wand-progress" class="mt-4"></div>
+                                <div id="wand-result" class="mt-4 hidden"></div>
+                            </div>
                         </div>
                         <div>
                             <div class="flex items-center justify-between">
@@ -393,4 +403,5 @@
     <script type="module" src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </body>
+
 </html>
