--- a/index.html
+++ b/index.html
@@ -375,8 +375,7 @@
                     <div id="more-games" class="games-sub-tab-content hidden">
                         <div class="category-content mt-4">
                             <p class="text-lg text-yellow-200">
-                                <span class="font-bold">More Games:</span> Coming soon:
-                                Sorting Hat Quiz enhanced and more!
+                                <span class="font-bold">More Games:</span> More Games Coming Soon!
                             </p>
                         </div>
                     </div>
