--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <option value="">Choose a Background</option>
             </select>
         </div>
-        <div id="lore-games" class="tab-content hidden bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
+        <div id="lore-games" class="hidden">
             <div class="flex flex-col lg:grid lg:grid-cols-2 gap-6">
                 <!-- Lore Section -->
                 <div id="lore" class="bg-gray-800 bg-opacity-70 rounded-lg p-6">
