--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         
-        <div id="music-ambiance" class="tab-content hidden bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg">
+        <div id="music-ambiance" class="tab-content bg-gray-900 bg-opacity-80 rounded-xl p-6 shadow-lg hidden">
             <div class="flex flex-col lg:grid lg:grid-cols-2 gap-6">
                 <!-- Music Section -->
                 <div id="music" class="bg-gray-800 bg-opacity-70 rounded-lg p-6">
